--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         </p>
                         <div class="btn-grp">
                             <button class="btn-pink btn-project">Read More</button>
-                            <a href="">
+                            <a href="https://github.com/restructrishi/Portfolio-Website">
                                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                             </a>
                             <a href="">
