--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <div class="logo-container">
 
-                    <img src="images/Ri.png" class="logo" height="50px">
+                    <img src="images/rishabh.jpg" class="logo" height="50px">
                     <div class="logo-text">ishabh Nigam</div>
                 </div>
 
