--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <div class="logo-container">
 
-                    <img src="images/rishabh.jpg" class="logo" height="50px">
+                    <img src="images/Ri.png" class="logo" height="50px">
                     <div class="logo-text">ishabh Nigam</div>
                 </div>
 
@@ -67,7 +67,7 @@
                         <img src="plus.png" alt="" />
                     </div> -->
                     <div class="user-image">
-                        <img src="images/Myyimage.png" alt="" />
+                        <img src="images/rishabh.jpg" alt="" />
                     </div>
                 </div>
             </div>
