--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <img src="plus.png" alt="" />
                     </div> -->
                     <div class="user-image">
-                        <img src="images/rishabh.jpg" alt="" />
+                        <img src="images/Myimage.jpg" alt="" />
                     </div>
                 </div>
             </div>
